--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -9,10 +9,11 @@ $select2-inner-background: #f1f5f6;
 $contact-avatar: 90px;
 
 $crm-checkbox-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+$crm-contribute-form-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.1);
 $crm-form-item-shadow: 0 3px 6px 0 rgba(48, 40, 40, 0.25);
 $crm-form-layout-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
-$crm-contribute-form-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.1);
 $crm-input-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2) inset;
+$crm-search-input-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
 
 $crm-black-olive-color: #3E3E3E;
 $crm-blue-light: #58b7d1;
