--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab.html
@@ -1,5 +1,25 @@
-<div class="tabs-container">
-  <uib-tabset>
+<div class="absence-tab-page">
+  <div class="btn-group">
+    <button type="button" class="btn btn-info">create new</button>
+    <button
+      type="button"
+      class="btn btn-info dropdown-toggle"
+      data-toggle="dropdown">
+      <span class="caret"></span>
+      <span class="sr-only">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu" role="menu">
+      <li>
+        <a href="#">Record staff sickness</a>
+      </li>
+      <li>
+        <a href="#">Record staff overtime</a>
+      </li>
+    </ul>
+  </div>
+  <uib-tabset active="active"
+              type="pills"
+              custom-header-class="nav-pills-horizontal nav-pills-horizontal-default">
     <uib-tab heading="Report">
       <absence-tab-report></absence-tab-report>
     </uib-tab>
