--- a/com.civicrm.hrjobroles/views/include/job_role_panel.html
+++ b/com.civicrm.hrjobroles/views/include/job_role_panel.html
@@ -88,16 +88,17 @@
                   </div>
                 </div>
                 <div class="form-group" ng-init="jobroles.initData(job_roles_data.id, 'start_date', job_roles_data.start_date)">
-                  <label for="{{prefix}}start_date" class="col-sm-4 control-label">
+                  <label for="{{prefix}}start_date"
+                    class="col-sm-4 control-label"
+                    ng-class="{ 'required-mark': !jobroles.edit_data[job_roles_data.id]['start_date'] }">
                     Start Date:
-                    <i class="fa fa-asterisk" style="vertical-align: text-top; color: red; font-size: 5px;" ng-show="!jobroles.edit_data[job_roles_data.id]['start_date']"></i>
                   </label>
                   <!-- FIX: xeditable datepicker doesn't work here as it isn't compatible with input field -->
                   <div class="col-sm-8">
                     <p class="form-control-static" ng-show="!editableForm.$visible">
                       {{jobroles.edit_data[job_roles_data.id]['start_date'] | formatDate}}
                     </p>
-                    <div class="input-group input-group-unstyled" ng-hide="!editableForm.$visible">
+                    <div class="input-group" ng-hide="!editableForm.$visible">
                       <input type="text" class="form-control" id="{{prefix}}start_date"
                         placeholder="{{jobroles.format}}"
                         name="start_date"
@@ -109,10 +110,14 @@
                         close-text="Close"
                         ng-click="jobroles.open('start_date')"
                         required>
-                      <span class="input-group-addon fa fa-calendar"></span>
+                      <span class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
+                      </span>
                     </div>
-                    <div ng-show="editableForm.start_date.$error.custom" style="display: block; color:maroon" role="alert">
-                      <div ng-repeat="error in editableForm.start_date.$error.custom">{{error}}</div>
+                    <div ng-show="editableForm.start_date.$error.custom">
+                      <div ng-repeat="error in editableForm.start_date.$error.custom" class="form-error-message">
+                        <span class="label label-danger">{{error}}</span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -125,7 +130,7 @@
                     <p class="form-control-static" ng-show="!editableForm.$visible">
                       {{jobroles.edit_data[job_roles_data.id]['end_date'] || "Unspecified" | formatDate }}
                     </p>
-                    <div class="input-group input-group-unstyled" ng-hide="!editableForm.$visible">
+                    <div class="input-group" ng-hide="!editableForm.$visible">
                       <input type="text" class="form-control" id="{{prefix}}end_date"
                         placeholder="{{jobroles.format}}"
                         name="end_date"
@@ -136,10 +141,14 @@
                         ng-disabled="isDisabled"
                         ng-click="jobroles.open('end_date')"
                         close-text="Close">
-                      <span class="input-group-addon fa fa-calendar"></span>
+                      <span class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
+                      </span>
                     </div>
-                    <div ng-show="editableForm.end_date.$error.custom" style="display: block; color:maroon" role="alert">
-                      <div ng-repeat="error in editableForm.end_date.$error.custom">{{error}}</div>
+                    <div ng-show="editableForm.end_date.$error.custom">
+                      <div ng-repeat="error in editableForm.end_date.$error.custom" class="form-error-message">
+                        <span class="label label-danger">{{error}}</span>
+                      </div>
                     </div>
                   </div>
                 </div>
