PCHR-2003: PR feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/absence-tab/components/absence-tab-container.html
@@ -17,9 +17,10 @@
       </li>
     </ul>
   </div>
-  <uib-tabset active="active"
-              type="pills"
-              custom-header-class="nav-pills-horizontal nav-pills-horizontal-default">
+  <uib-tabset
+    active="active"
+    type="pills"
+    custom-header-class="nav-pills-horizontal nav-pills-horizontal-default">
     <uib-tab heading="Report">
       <absence-tab-report></absence-tab-report>
     </uib-tab>
