AI-57: Fix memberships batch data entry issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -19,6 +19,7 @@ $crm-black-olive-color: #3E3E3E;
 $crm-blue-light: #58b7d1;
 $crm-blue-light-color: #5897FB;
 $crm-cancel-color: #555;
+$crm-dark-gray-color: #70716b;
 $crm-green-color: #B0D730;
 $crm-light-green-color: #F1F8EB;
 
