--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
@@ -1,8 +1,18 @@
 .page-civicrm-batch {
   .crm-submit-buttons {
-      margin: 0;
-      margin-bottom: 25px;
-      margin-top: 15px;
+    margin: 0;
+    margin-bottom: 25px;
+    margin-top: 15px;
+
+    #newBatch.button {
+      background: $crm-dark-gray-color;
+      border: transparent !important;
+      color: $crm-white !important;
+
+      &:hover {
+        color: $crm-white !important;
+      }
+    }
   }
 
   .crm-batch-search-form-block,
@@ -17,21 +27,21 @@
       font-weight: 600;
     }
 
-    table {
-      tr {
-        td {
-          vertical-align: top;
-          padding: 15px 25px;
+    table tr td {
+      vertical-align: top;
+      padding: 15px 25px;
 
-          &:nth-child(2) {
-            padding: 15px 0;
-          }
+      &:nth-child(2) {
+        padding: 15px 0;
+      }
 
-          .crm-button {
-            i {
-              top: 15px;
-            }
-          }
+      .crm-button {
+        i {
+          top: 15px;
+        }
+
+        .crm-form-submit {
+          padding: 8px 0 8px 12px;
         }
       }
     }
@@ -130,10 +140,6 @@
     background: $crm-white;
     padding: 15px;
 
-    .help {
-      padding-left: 0;
-    }
-
     #crm-batch-entry-table {
       border-color: $crm-background;
       margin: 0 !important;
@@ -146,14 +152,137 @@
       border: none !important;
     }
 
+    .form-layout-compressed {
+      margin-bottom: 20px;
+
+      .label {   
+        color:  $crm-copy;
+      }
+
+      td.right {
+        color:  $crm-copy;            
+        vertical-align: middle;
+      }
+    }
+
+    .crm-grid-table {
+      border: none !important;
+      border-radius: $border-radius-base;
+      box-shadow: $crm-form-layout-shadow;
+
+      .crm-grid-header {
+        border-bottom: 1px solid  $crm-dark-grayblue;
+        border-top-left-radius: $border-radius-base;
+        border-top-right-radius: $border-radius-base;
+
+        .crm-grid-cell {
+          background: $gray-lighter;
+          border: none;
+          padding: 10px;
+          vertical-align: middle;
+
+          &:first-child {
+            border-top-left-radius: $border-radius-base;
+          }
+
+          &:last-child {
+            border-top-right-radius: $border-radius-base;
+          }
+        }
+      }
+
+      .crm-grid-row {
+        border-bottom: 1px solid  $crm-background;
+        border-bottom-left-radius: $border-radius-base;
+        border-bottom-right-radius: $border-radius-base;
+
+        &.odd-row {
+          background: $crm-white;
+        }
+
+        &:last-child {
+          &:first-child {
+            border-bottom-left-radius: $border-radius-base;
+          }
+
+          &:last-child {
+            border-bottom-right-radius: $border-radius-base;
+          }
+        }
+
+        .crm-grid-cell {
+          border: none;
+          padding: 10px;
+
+          span.batch-edit,
+          span.batch-valid, 
+          span.batch-invalid {
+            line-height: 30px;
+          }
+        }
+
+        > .select2-container {
+          margin: 10px;
+        }
+
+        input.crm-form-text,
+        input.dateplugin {
+          background-color: $crm-white;
+          background-image: none;
+          border: 1px solid $crm-darker-grayblue;
+          border-radius: $border-radius-base;
+          box-shadow: $crm-input-shadow;
+          color: $gray-darker;
+          font-size: $font-size-base;
+          height: 20px;
+          padding: 4px 10px;
+          @include transition(border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s);
+        }
+
+        input.dateplugin  {
+          width: 62px !important;
+        }
+
+        [class*="crm-batch-join_date-"],
+        [class*="crm-batch-membership_"] {
+            display: block;
+            width: 125px !important;
+
+            .crm-clear-link {
+              margin-left: -5px !important;
+              padding: 4px 0;
+            }
+        }
+
+        .select2-container {
+          margin-bottom: 10px;
+
+          .select2-choice {          
+            box-shadow: $crm-input-shadow;
+            height: 28px;
+            line-height: 28px;
+
+            .select2-arrow {
+              background: transparent;
+            }
+          }
+
+          &#s2id_field_1_membership_type_1 {
+            width: 120px !important;
+          }        
+        }
+      }      
+    }
+
     .crm-submit-buttons {
       .crm-form-submit {
         background: $brand-primary;
         border-color: $brand-primary;
-        padding: 7px;
-        border-radius: 2px;
+        border-radius: $border-radius-base;
         margin-right: 0;
+        padding: 7px;
         text-shadow: none;
+        text-transform: uppercase;
       }
     }
   }
