--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/custom-civicrm.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 @import '../bootstrap/overrides/variables';
 @import '../../../org.civicrm.bootstrap/scss/overrides/variables';
 @import '../../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables';
