AI-101: Fix suggested issues in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
@@ -1,4 +1,7 @@
-// Mixins SCSS
+/*
+ * It use for calculate height and width the element
+ */
+
 // =======================
 
 @mixin calc($property, $expression, $content:null) {
