--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar-month.html
@@ -30,6 +30,12 @@
             <span ng-if="day.UI.isAM">AM</span>
             <span ng-if="day.UI.isPM">PM</span>
             <span ng-if="day.UI.isAccruedTOIL">AT</span>
+            <a ng-if="day.leaveRequest"
+               contact-id="calendar.contactId"
+               leave-request-popup
+               leave-request="day.leaveRequest"
+               title="Click to open Leave Request">
+            </a>
           </div>
         </td>
       </tr>
