AI-96: Fix contacts record events issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -21,7 +21,7 @@ $crm-blue-light-color: #5897FB;
 $crm-cancel-color: #555;
 $crm-dark-gray-color: #70716b;
 $crm-green-color: #B0D730;
-$crm-light-green-color: #F1F8EB;
+$crm-light-green-color: #BEDEBB;
 
 $font-family-fontawesome: 'FontAwesome';
 
