AI-91: Fix contact record membership tab issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -76,6 +76,13 @@
       }
     }
   }
+
+  .btn-slide:after {
+    background: none;
+    content: $fa-var-ellipsis-v;
+    font-family: $font-family-fontawesome;
+    right: -5px;
+  }
 }
 
 .page-civicrm {
