--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -11,7 +11,7 @@
       color: $gray-darker;
       font: $headings-font-weight $font-size-h2 $font-family-base;
       margin: 0;
-      padding: 20px;
+      padding: 13px 20px;
     }
 
     table {
@@ -92,13 +92,22 @@
       }
     }
   }
+
+  #memberships table {
+    display: block;
+    overflow-x: auto;
+
+    td {
+      white-space: nowrap;      
+    }
+  }
 }
 
 .page-civicrm-contact-view {
   .help {
     background: $crm-light-green-color;
-    border: 1px solid $crm-green-color;
-    border-radius: $border-radius-child;
+    border: none;
+    border-radius: $border-radius-base;
     margin-bottom: 20px;
     white-space: normal;
   }
