PCHR-1273: Comment Late HTML until it is developed

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
@@ -184,14 +184,15 @@
                 <span class="chr_leave-calendar__legend__label">Non Working Day</span>
               </div>
             </div>
-            <div class="col-sm-3">
-              <div class="chr_leave-calendar__legend__entry">
-                <div
-                  class="chr_leave-calendar__item chr_leave-calendar__item--type--late chr_leave-calendar__item--alt">
-                  <span>L</span></div>
-                <span class="chr_leave-calendar__legend__label">Late</span>
-              </div>
-            </div>
+            <!--Uncomment when LATE is developed -->
+            <!--<div class="col-sm-3">-->
+              <!--<div class="chr_leave-calendar__legend__entry">-->
+                <!--<div-->
+                  <!--class="chr_leave-calendar__item chr_leave-calendar__item&#45;&#45;type&#45;&#45;late chr_leave-calendar__item&#45;&#45;alt">-->
+                  <!--<span>L</span></div>-->
+                <!--<span class="chr_leave-calendar__legend__label">Late</span>-->
+              <!--</div>-->
+            <!--</div>-->
           </div>
         </div>
       </div>
